--- a/style/site.css
+++ b/style/site.css
@@ -186,55 +186,56 @@ section {
 
 /* Grphics Style */
 
-#grid img {
-  border: 0;
-  display: block;
-  width: 100%;
+#graphics_menu {  
+	padding-top: 30px; 
+    margin: 1rem 20rem;
+    column-count: 3;
+    -webkit-column-gap: 1rem;
+    -moz-column-gap: 1rem;
+    column-gap: 1rem;
+    -webkit-column-width: 33.33333333333333%;
+    -moz-column-width: 33.33333333333333%;
+    column-width: 33%;
 }
 
-.grid {
-	margin: 0 201px;
+.tile { 
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: all 350ms ease;
+    transition: all 350ms ease;
+
+}
+.tile:hover { 
+
 }
 
-.grid .item {
-	display: block;
-	float: right;
-	padding: 3px;
-	width: 33%;
-	opacity: 0.6;
-	transition: all 0.2s ease-in;
+.scale-anm {
+  transform: scale(1);
 }
 
-.grid .item:hover {
-	opacity: 1;
+.tile img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+}
+
+#category-menu li {
+    font-size: 15px;
+    margin-bottom: 10px;
+    text-decoration: none;
+    cursor: pointer;
+    display: inline-block;
+    padding: 6px 20px;
+    border: 1px solid #3b3b3b;
+    color: #3b3b3b;
+    border-radius: 0;
     transition: all 0.2s ease-in;
 }
 
-.grid.effect-2 .item.animate {
-	-webkit-transform: translateY(200px);
-	transform: translateY(200px);
-	-webkit-animation: moveUp 0.65s ease forwards;
-	animation: moveUp 0.65s ease forwards;
+#category-menu li:hover {
+	 border: 1px solid #ffae21;
+	 transition: all 0.2s ease-in;
 }
 
-@-webkit-keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); opacity: 1; }
-}
 
-@keyframes moveUp {
-	0% { }
-	100% { -webkit-transform: translateY(0); transform: translateY(0); opacity: 1; }
-}
-@media screen and (max-width: 900px) {
-	.grid .item {width: 50%;}
-  .entry {box-shadow: none;}
-  .entry > .grid > .item {width: 50%;}
-}
-
-@media screen and (max-width: 400px) {
-	.grid .item {width: 100%;}
-  .entry {padding: 20px 0;}
-  .entry > p {padding: 10px;}
-  .entry > .grid > .item {width: 100%;}
-}
